<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="menuAbout">About Radio</string>
    <string name="menuClose">Exit</string>

    <string-array name="drawerMenu">
        <item>Blogs and Sites</item>
        <item>Newspapers</item>
        <item>Radio</item>
        <item>Videos</item>
        <item>About Us</item>
    </string-array>
    <string-array name="subscription_category">
        <item>Blogs</item>
        <item>Newspapers</item>
        <item>Videos</item>
    </string-array>

    <string name="hello_world">Hello world!</string>
    <string name="card_title">title</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="loading">Loading please wait…</string>
    <string name="title">Title goes here!</string>
    <string name="date">Date goes here!</string>
    <string name="desc">Description goes here!</string>
    <string name="linkLabel">Link to web: </string>
    <string name="linkText">Link goes here!</string>
    <string name="overflow">Menu Overflow</string>
    <string name="color_stripe">Color Stripe</string>
    <string name="app_name">Habari Hub</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share App</string>
    <string name="menu_report">Report Problem</string>
    <string name="menu_rate">Rate this app</string>
    <string name="menu_update">Check for Update</string>
    <string name="settings_theme">Dark theme</string>
    <string name="about_title">Habari Hub</string>
    <string name="radio_title">H/H Radio</string>
    <string name="radio_greeting">Karibu</string>
    <string name="credits">LIBRARIES\nActionBarSherlock\nFading Action Bar\nCards UI\n\nCODE\nMedia Player - Roger Cotrina</string>
    <string name="about_github">Please contact developer(s) for source code</string>
    <string name="start_disclaimer">By selecting start using Habari Hub you agree to terms and conditions,and permissions requested by this app.</string>
    <string name="about_start">Thank you for downloading our app. Here is a quick tutorial how to use HabariHub:\n\n1.Select a category e.g. Newspapers\n2.Select a source e.g. Mwananchi\n3.Select article\n4.SWIPE between articles, right for older, left for newer\n5Share article with friends\n\nDo not forget to rate HabariHub on playstore, and use the report menu to report bugs/suggestions and we will work on them</string>
    <string name="about_text">Habari Hub is a lightweight app created to integrate major Tanzania news sources into one place. We are NOT affiliated to any source used in this app</string>
    <string name="main_test">Thank you for being part of this app, as of now this app is in early development stages. Timeline for this app is as follows:\n1st June 2013 \- Alpha Release\n1st July 2013 \- Beta Release\n1st August 2013 \- Final Release.\nAlmost everything right now is in webView but we are working hard to bring everything native. \nNB: Dates are subject to change at any given time.</string>
    <string name="view_story">View Story</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="visit_google_plus">Add Me To Your Google+ Circles</string>
    <string name="dialog_title">Add A News Source</string>
    <string name="feed_search_query">Search Source</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="station_picker_prompt">Choose a Radio Station</string>
    <string name="title_activity_feed_search">FeedSearch</string>
    <string name="dialog_warning_text">This feature is under development, but for the time being the FIRST results is likely what you need</string>
    <string name="title_activity_main_activity_tabbed">Habari Hub</string>
    <string name="title_read">Read</string>
    <string name="title_listen">Listen</string>
    <string name="title_watch">Watch</string>

</resources>