<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:HabariHub="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/share"
        android:title="@string/menu_share"/>
    <item
        android:id="@+id/report"
        HabariHub:showAsAction="ifRoom"
        android:icon="@drawable/menu_error"
        android:title="@string/menu_report"/>
    
     <item
        android:id="@+id/add"
        HabariHub:showAsAction="always"
        android:icon="@drawable/ic_action_new"
        android:title="@string/menu_report"/>
    <item
        android:id="@+id/rate"
        android:icon="@drawable/rating"
        HabariHub:showAsAction="ifRoom"
        android:title="@string/menu_rate"/>
    <item
        android:id="@+id/update"
        android:title="@string/menu_update"/>
    <item
        android:id="@+id/settings"
        android:title="@string/menu_settings"/>

</menu>